# api_sur_etagere

./: Creating_and_Accessing_using_FastAPI.ipynb  README.md  pyproject.toml
