[project]
name = "building_api"
version = "1.0.0"
description = "Environment for building api"
authors = [
    { name = "Espoir BADOHOUN", email = "espoir.badohoun.gmail.com" }
]
readme = "README.md"
requires-python = ">=3.11,<3.12"

dependencies = [
    "fastapi==0.115.13",
    "ipykernel>=7.2.0",
    "requests>=2.33.1",
    "uvicorn>=0.42.0",
]
